<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model_view"
            type="com.mertgolcu.basicnote.ui.note.NoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.note.NoteFragment">

        <include
            android:id="@+id/custom_title_bar"
            layout="@layout/titlebar" />

        <EditText
            android:id="@+id/edit_text_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:background="@drawable/edit_text_note_background"
            android:fontFamily="@font/josefin_sans_semibold"
            android:hint="@string/title_hint"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.title}"
            android:textColor="@color/text_color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_title_bar"
            tools:text="@string/example_note_title" />

        <EditText
            android:id="@+id/edit_text_note_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/tiny_margin"
            android:background="@drawable/edit_text_note_background"
            android:fontFamily="@font/josefin_sans_semibold"
            android:gravity="start"
            android:hint="@string/note_hint"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.noteText}"
            android:textColor="@color/text_color_gray"
            app:layout_constraintBottom_toTopOf="@id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_note_title"
            tools:text="@string/long_example_note_text" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/josefin_sans_semibold"
            android:gravity="center_horizontal|center_vertical"
            android:padding="@dimen/semi_medium_margin"
            android:paddingStart="@dimen/large_margin"
            android:paddingEnd="@dimen/large_margin"
            android:text="@string/save_note"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/tiny_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
