<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.changepassword.ChangePasswordFragment">

    <data>

        <variable
            name="model_view"
            type="com.mertgolcu.basicnote.ui.changepassword.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/custom_title_bar"
            layout="@layout/titlebar" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/edit_text_focus_selector"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.password}"
            app:layout_constraintTop_toBottomOf="@id/custom_title_bar" />

        <EditText
            android:id="@+id/edit_text_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/edit_text_focus_selector"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.newPassword}"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

        <EditText
            android:id="@+id/edit_text_retype_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/edit_text_focus_selector"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical"
            android:hint="@string/retype_new_password"
            android:inputType="textPassword"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.retypeNewPassword}"
            app:layout_constraintTop_toBottomOf="@id/edit_text_new_password" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/josefin_sans_semibold"
            android:padding="@dimen/button_padding"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text"
            app:layout_constraintTop_toBottomOf="@id/edit_text_retype_new_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>