<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model_view"
            type="com.mertgolcu.basicnote.ui.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.forgotpassword.ForgotPasswordFragment">

        <!--        <ImageButton-->
        <!--            android:id="@+id/image_button_back"-->
        <!--            android:layout_width="@dimen/back_button_image_size"-->
        <!--            android:layout_height="@dimen/back_button_image_size"-->
        <!--            android:layout_margin="@dimen/medium_margin"-->
        <!--            android:background="@android:color/transparent"-->
        <!--            android:scaleType="fitCenter"-->
        <!--            android:tint="@color/black"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:srcCompat="@drawable/ic_arrow_back" />-->

        <include
            android:id="@+id/custom_title_bar"
            layout="@layout/titlebar" />

        <TextView
            android:id="@+id/text_view_forgot_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xlarge_margin"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="@dimen/xlarge_margin"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/large_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_forgot_password_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xlarge_margin"
            android:layout_marginTop="@dimen/tiny_margin"
            android:layout_marginEnd="@dimen/xlarge_margin"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reset_password_desc"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/medium_text"
            app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_password_title" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/edit_text_focus_selector"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.emailText}"
            app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password_description" />


        <Button
            android:id="@+id/button_rest_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/josefin_sans_semibold"
            android:padding="@dimen/button_padding"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text"
            app:layout_constraintTop_toBottomOf="@id/edit_text_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>