<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment">

    <data>

        <variable
            name="model_view"
            type="com.mertgolcu.basicnote.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/custom_title_bar"
            layout="@layout/titlebar" />

        <EditText
            android:id="@+id/edit_text_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/edit_text_focus_selector"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.fullNameText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_title_bar" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/edit_text_focus_selector"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/medium_margin"
            android:text="@={model_view.emailText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_full_name" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/josefin_sans_semibold"
            android:padding="@dimen/button_padding"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text"
            app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

        <TextView
            android:id="@+id/text_view_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/josefin_sans_semibold"
            android:gravity="center_horizontal|center_vertical"
            android:text="Change Password"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/medium_text"
            app:layout_constraintTop_toBottomOf="@+id/button_save" />

        <TextView
            android:id="@+id/text_view_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/josefin_sans_semibold"
            android:gravity="center_horizontal|center_vertical"
            android:text="Sign Out"
            android:textColor="@color/error_red"
            android:textSize="@dimen/medium_text"
            app:layout_constraintTop_toBottomOf="@+id/text_view_change_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>